--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="four">
       <div class="text-box">
-        <p class="hbd-chatbox" data-node-name="textInChatBox">Happy birthday to you!! Yeee! Many many happy blah...</p>
+        <p class="hbd-chatbox" data-node-name="textInChatBox">Happy birthday to you! wish u all the best</p>
         <p class="fake-btn" data-node-name="sendButtonLabel">Send</p>
       </div>
     </div>
@@ -50,7 +50,7 @@
       <img src="img/hat.svg" alt="" class="hat">
       <div class="wish">
         <h3 class="wish-hbd" data-node-name="wishHeading">Happy Birthday!</h3>
-        <h5 data-node-name="wishText">May the js.prototypes always be with you! ;)</h5>
+        <h5 data-node-name="wishText">May Allah SWT always be with you! ;)</h5>
       </div>
     </div>
     <div class="seven">
